# pluginbase

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  ROLES.md  START_HERE.md  package.json  pnpm-lock.yaml  setup-env.js
.claude/: settings.local.json
.cursor/rules/: multi-agent-protocol.mdc
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts
apps/api/src/data/: plugin-registry.json
apps/overlay/: index.html  package.json
apps/overlay/src/: App.tsx
apps/overlay/src-tauri/: Cargo.toml  tauri.conf.json
apps/overlay/src-tauri/src/: main.rs  plugin_matcher.rs  window_detector.rs
apps/web/: next.config.ts  package.json  vercel.json
apps/web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts
apps/web/components/: ActivityTimeline.tsx  BrandConcentrationChart.tsx  CategoryDistributionChart.tsx  Providers.tsx
apps/web/hooks/: useFilteredItems.ts  useSessionLogger.ts
apps/web/lib/: api.ts  auth.ts  category-knowledge.ts  duplicate-detector.ts  insights-engine.ts  logger.ts  plugin-knowledge.ts  plugin-normalizer.ts  plugin-scanner.ts  scanner.ts
apps/web/scripts/: dict-audit.ts  smoke-test.ps1
apps/web/stores/: authStore.ts  filters-store.ts  inventory-store.ts  onboarding-store.ts  session-log-store.ts  unrecognized-store.ts
apps/web/types/: file-system-access.d.ts
docs/: README.md
docs/collaboration/: DECISIONS.md  HANDOFF_LOG.md  HANDOFF_TEMPLATE.md  PROJECT_CONTEXT.md  README.md  TASK_BOARD.md  WORKING_RULES.md
(+61 files in other folders)
