[package]
name = "pluginbase-overlay"
version = "0.1.0"
description = "PluginBase Overlay — détection plugins Windows"
authors = ["Elzear"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "system-tray", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_System_Threading",
] }

[features]
# Requis pour les builds de production (tauri build).
# Active le protocole custom:// pour servir les assets depuis le bundle.
# NE PAS SUPPRIMER.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
